components/gateway/gateway-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gw-http
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      exposure: tailnet
  addresses:
    - type: IPAddress
      value: 10.250.0.20
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.home"
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
